--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,7 +1,14 @@
 @import './base/_base';
 @import './base/_resets';
 @import './base/_typography';
+@import './base/_colors';
+@import './base/_images';
 
 @import './layout/_flex';
 @import './layout/margins';
 @import './layout/paddings';
+@import './layout/sizes';
+@import './layout/positions';
+
+
+@import './mini-cooper';
