--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
-body { margin: 0; padding: 0; line-height: 1.5; font-family: 'Poppins', sans-serif; }
+body { margin: 0; padding: 0; }
 
 .max-width { width: 100%; margin-left: auto; margin-right: auto; }
+
+.max-width-415 { max-width: 415px; }
 
 .max-width-900 { max-width: 900px; }
 
@@ -68,13 +70,23 @@ input, button, textarea, select { font: inherit; }
 
 .font-s-19 { font-size: 19px; }
 
-.font-s-20 { font-size: 20px; }
+.font-s-23 { font-size: 23px; }
 
-.font-s-28 { font-size: 28px; }
+.font-s-45 { font-size: 45px; }
+
+.font-s-60 { font-size: 60px; }
 
 .text-left { text-align: left; }
 
 .text-center { text-align: center; }
+
+.line-h-1 { line-height: 1; }
+
+.color-white { color: #fff; }
+
+.back-black { background-color: #000; }
+
+.back-black-trans { background-color: rgba(0, 0, 0, 0.5); }
 
 .fx { display: flex; }
 
@@ -84,6 +96,78 @@ input, button, textarea, select { font: inherit; }
 
 .fx-col { flex-direction: column; }
 
+.fx-ver-cen { align-items: center; }
+
+.fx-hor-cen { justify-content: center; }
+
+.fx-wrap { flex-wrap: wrap; }
+
+.fx-gap-2 { gap: 2px; }
+
 .m-t-15 { margin-top: 15px; }
 
 .m-t-30 { margin-top: 30px; }
+
+.m-b-10 { margin-bottom: 10px; }
+
+.m-b-30 { margin-bottom: 30px; }
+
+.m-b-45 { margin-bottom: 45px; }
+
+.p-30 { padding: 30px; }
+
+.w-100 { width: 100%; }
+
+.w-100-vw { width: 100vw; }
+
+.h-100 { height: 100%; }
+
+.h-100-vh { height: 100vh; }
+
+.overflow-x-auto { overflow-x: auto; }
+
+.pos-rel { position: relative; }
+
+.pos-abs { position: absolute; }
+
+.center-w { left: 50%; transform: translateX(-50%); }
+
+.center-h { top: 50%; transform: translateY(-50%); }
+
+.center-wh { left: 50%; top: 50%; transform: translate(-50%, -50%); }
+
+body { font-family: 'Poppins', sans-serif; background-color: #fbfbfb; color: #1a1a1a; }
+
+section { padding: 0 15px; }
+
+header { background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("/images/mini-bg.jpg"); background-repeat: no-repeat; background-size: cover; background-position: center; }
+
+header h1 { border: 10px solid #fff; border-radius: 20px; }
+
+header .scrolldown-btn { width: 50px; height: 100px; position: absolute; left: 50%; bottom: 45px; transform: translateX(-50%); text-align: center; }
+
+header .scrolldown-btn svg { position: absolute; bottom: 0; left: 0; width: 100%; height: auto; }
+
+header .scrolldown-btn svg path.first-path { animation: scrollanim 1s ease-in-out infinite; animation-delay: 0.8s; }
+
+header .scrolldown-btn svg path.second-path { animation: scrollanim2 1s ease-in-out infinite; }
+
+@keyframes scrollanim { 0% { transform: translate(0, -40px);
+    opacity: 0; }
+  60% { transform: translate(0, 0);
+    opacity: 0.8; } }
+
+@keyframes scrollanim2 { 0% { transform: translate(0, -40px);
+    opacity: 0; }
+  60% { transform: translate(0, 0px);
+    opacity: 0.6; } }
+
+p + p { margin-top: 15px; }
+
+a, a:visited { color: #d5ae86; }
+
+h2 { position: relative; padding-left: 25px; }
+
+h2::before { content: ''; display: block; position: absolute; top: 6px; left: 0; background-color: #d5ae86; width: 7px; height: 32px; }
+
+.gallery-1 a, .gallery-2 a { max-height: 310px; overflow-y: hidden; }
