--- a/styles/layout/_flex.scss
+++ b/styles/layout/_flex.scss
@@ -12,4 +12,29 @@
     &-col {
         flex-direction: column;    
     }
+
+    &-ver {
+
+        &-cen {
+            align-items: center;
+        }
+    }
+
+    &-hor {
+
+        &-cen {
+            justify-content: center;
+        }
+    }
+
+    &-wrap {
+        flex-wrap: wrap;
+    }
+
+    &-gap {
+        
+        &-2 {
+            gap: 2px;
+        }
+    }
 }
