--- a/styles/layout/_margins.scss
+++ b/styles/layout/_margins.scss
@@ -6,3 +6,11 @@ $margin-top: 15, 30;
         margin-top: #{$size}px;
     }
 }
+
+$margin-bottom: 10, 30, 45;
+
+@each $size in $margin-bottom {
+    .m-b-#{$size} {
+        margin-bottom: #{$size}px;
+    }
+}
